--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "lib": ["ES2020"],
     "outDir": "./dist",
 
-    "rootDir": "./",
-
 
     "strict": true,
     "esModuleInterop": true,
@@ -25,13 +23,14 @@
 
   //Scans files
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ],
 
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "models",
+    "routes"
   ]
 }
